# rp2350-dvitest-dslite_soundTest

./: README.md  gen_rainbow.py  out.raw  png2raw.py
dvitest/: CMakeLists.txt  dvitest.c  ndsl_video.pio
dvitest/images/: rainbow_320x240_rgb666.h
scripts/: setup_testing_env.sh  test_build.sh
